projects/webapp/k8s/service.yml
apiVersion: v1
kind: Service
metadata:
  namespace: default
  labels:
    app: webapp
  name: webapp
spec:
  ports:
  - port: 80
    protocol: TCP
    targetPort: 80
  selector:
    app: webapp
  type: ClusterIP
