projects/webapp/k8s/ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: webapp
  namespace: default
spec:
  rules:
  - host: web.tozzi.fan
    http:
      paths:
      - backend:
          serviceName: webapp
          servicePort: 80
